# graphdoc

./: .env.example  .gitignore  LICENSE  README.md  run.sh
graphdoc/: .flake8  README.md  pyproject.toml  requirements.txt  run.sh  scratch_queue.py
graphdoc/assets/configs/: single_prompt_doc_generator_module.yaml  single_prompt_doc_generator_module_eval.yaml  single_prompt_doc_generator_trainer.yaml  single_prompt_doc_quality_trainer.yaml
graphdoc/docs/: conf.py  generate_docs.py  graphdoc.data.mlflow_data.rst  graphdoc.data.rst  graphdoc.modules.rst  graphdoc.modules.token_tracker.rst  graphdoc.rst  graphdoc.train.rst  index.rst
graphdoc/graphdoc/: __init__.py  config.py  main.py  run.sh
graphdoc/graphdoc/data/: __init__.py  helper.py  local.py  parser.py  schema.py
graphdoc/graphdoc/docs/: conf.py
graphdoc/graphdoc/eval/: __init__.py  doc_generator_eval.py
graphdoc/graphdoc/modules/: __init__.py  doc_generator_module.py  schema_doc_generator.py  token_tracker.py
graphdoc/graphdoc/prompts/: __init__.py  schema_doc_generation.py  schema_doc_quality.py  single_prompt.py
graphdoc/graphdoc/train/: __init__.py  doc_generator_trainer.py  doc_quality_trainer.py  optimizers.py  single_prompt_trainer.py
graphdoc/runners/eval/: eval_doc_generator_module.py
graphdoc/runners/train/: doc_quality_trainer.py  single_prompt_trainer.py
graphdoc/tests/: .env.example  README.md  __init__.py  conftest.py  test_confest.py  test_config.py  test_graphdoc.py
graphdoc/tests/data/: __init__.py  test_helper.py  test_local.py  test_parser.py  test_schema.py
(+92 files in other folders)
