[project]
name = "graphdoc"
version = "0.1.0"
description = ""
authors = [
    {name = "denver",email = "denver@semiotic.ai"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
black = "24.10.0"
pyright = "1.1.392.post0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
